src/test/ui/error-codes/E0454.rs
#[link(name = "")] extern {}
//~^ ERROR E0454

fn main() {
}
